--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This is backend of ecommerce flipkart clone project",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon ./src/server.js"
+    "start": "node ./src/server.js"
   },
   "keywords": [
     "ecommerce",
